@@ -1,3 +1,7 @@
+2009-02-23 Chris Allegretta <chrisa@asty.org>
+	* rcfile.c (parse_keybinding) - Define a var before tryung to use it.  Whoops!
+	* fix some redefinitions causing compiler warnings, from Eitan Adler.  Other
+	  (hopefully) fixes for uncasted malloc()s, reported by the same.
 
 GNU nano 2.1.9 - 2009.02.16
 2009-02-16 Chris Allegretta <chrisa@asty.org>
